Added JEE 7 web application.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 *.jar
 *.war
 *.ear
+/church-management-jee/target/
+/church-management-jee/nb-configuration.xml
+/church-management/target/
+/target/
