--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,6 @@ limitations under the License.
         <session-timeout>20</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>home.xhtml</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
