--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ro.satrapu</groupId>
     <artifactId>church-management</artifactId>
@@ -11,112 +11,117 @@
     <description>JEE web application used for managing the assets of a church.</description>
     <inceptionYear>2014</inceptionYear>
     <ciManagement>
-        <system>drone.io</system>
-        <url>https://drone.io/github.com/satrapu/church-management-jee</url>
+	<system>drone.io</system>
+	<url>https://drone.io/github.com/satrapu/church-management-jee</url>
     </ciManagement>
     <scm>
-        <connection>scm:git:https://github.com/satrapu/church-management-jee.git</connection>
-        <url>https://github.com/satrapu/church-management-jee</url>
+	<connection>scm:git:https://github.com/satrapu/church-management-jee.git</connection>
+	<url>https://github.com/satrapu/church-management-jee</url>
     </scm>
     <issueManagement>
-        <system>GitHub</system>
-        <url>https://github.com/satrapu/church-management-jee/issues</url>
+	<system>GitHub</system>
+	<url>https://github.com/satrapu/church-management-jee/issues</url>
     </issueManagement>
     <licenses>
-        <license>
-            <name>Apache License 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
+	<license>
+	    <name>Apache License 2.0</name>
+	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+	</license>
     </licenses>
     <developers>
-        <developer>
-            <id>satrapu</id>
-            <name>Bogdan Marian</name>
-            <email>bogdan.marian77@gmail.com</email>
-            <timezone>2</timezone>
-            <url>https://www.linkedin.com/in/bmarian</url>
-            <roles>
-                <role>Main commiter</role>
-            </roles>
-        </developer>
+	<developer>
+	    <id>satrapu</id>
+	    <name>Bogdan Marian</name>
+	    <email>bogdan.marian77@gmail.com</email>
+	    <timezone>2</timezone>
+	    <url>https://www.linkedin.com/in/bmarian</url>
+	    <roles>
+		<role>Main commiter</role>
+	    </roles>
+	</developer>
     </developers>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
     </properties>
     <repositories>
-        <repository>  
-            <id>prime-repo</id>  
-            <name>PrimeFaces Maven Repository</name>  
-            <url>http://repository.primefaces.org</url>  
-            <layout>default</layout>  
-        </repository>  
+	<repository>  
+	    <id>prime-repo</id>  
+	    <name>PrimeFaces Maven Repository</name>  
+	    <url>http://repository.primefaces.org</url>  
+	    <layout>default</layout>  
+	</repository>  
     </repositories>
     <dependencies>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.5.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.5.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency> 
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency> 
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency> 
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
-        </dependency>
-        <dependency>  
-            <groupId>org.primefaces</groupId>  
-            <artifactId>primefaces</artifactId>  
-            <version>4.0</version>  
-        </dependency>  
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.12.6</version>
-        </dependency> 
+	<dependency>
+	    <groupId>org.eclipse.persistence</groupId>
+	    <artifactId>eclipselink</artifactId>
+	    <version>2.5.2</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.eclipse.persistence</groupId>
+	    <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+	    <version>2.5.2</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>javax</groupId>
+	    <artifactId>javaee-web-api</artifactId>
+	    <version>7.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency> 
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
+	<dependency> 
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-core</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
+	<dependency> 
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.7</version>
+	</dependency>
+	<dependency>  
+	    <groupId>org.primefaces</groupId>  
+	    <artifactId>primefaces</artifactId>  
+	    <version>4.0</version>  
+	</dependency>  
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.14.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.torpedoquery</groupId>
+	    <artifactId>org.torpedoquery</artifactId>
+	    <version>1.6.0</version>
+	</dependency>
     </dependencies>
     <build>
-        <finalName>${project.name}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-        </plugins>
+	<finalName>${project.name}</finalName>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.1</version>
+		<configuration>
+		    <source>1.7</source>
+		    <target>1.7</target>
+		    <showDeprecation>true</showDeprecation>
+		</configuration>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.4</version>
+		<configuration>
+		    <failOnMissingWebXml>false</failOnMissingWebXml>
+		</configuration>
+	    </plugin>
+	</plugins>
     </build>
 </project>
