--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,11 @@
 	    <groupId>org.eclipse.persistence</groupId>
 	    <artifactId>eclipselink</artifactId>
 	    <version>2.5.2</version>
-	    <scope>provided</scope>
 	</dependency>
 	<dependency>
 	    <groupId>org.eclipse.persistence</groupId>
 	    <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
 	    <version>2.5.2</version>
-	    <scope>provided</scope>
 	</dependency>
 	<dependency>
 	    <groupId>javax</groupId>
@@ -101,8 +99,39 @@
 	    <version>1.6.0</version>
 	</dependency>
     </dependencies>
+    <profiles>
+	<profile>
+	    <id>glassfish</id>
+	    <activation>
+		<activeByDefault>true</activeByDefault>
+	    </activation>
+	    <properties>
+		<appserver.discriminator>glassfish</appserver.discriminator>
+	    </properties>
+	</profile>
+	<profile>
+	    <id>wildfly</id>
+	    <properties>
+		<appserver.discriminator>wildfly</appserver.discriminator>
+	    </properties>
+	</profile>
+    </profiles>
     <build>
 	<finalName>${project.name}</finalName>
+	<defaultGoal>clean install</defaultGoal>
+	<filters>
+	    <filter>src/main/filters/${appserver.discriminator}.properties</filter>
+	</filters>
+	<resources>
+	    <!-- replace data source name found inside persistence.xml with the one coming from the filter -->
+	    <resource>
+		<directory>src/main/resources</directory>
+		<filtering>true</filtering>
+		<includes>
+		    <include>**/*.xml</include>
+		</includes>
+	    </resource>
+	</resources>
 	<plugins>
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
@@ -120,6 +149,18 @@
 		<version>2.4</version>
 		<configuration>
 		    <failOnMissingWebXml>false</failOnMissingWebXml>
+		    <webResources>
+			<!-- copy app server specific files to WEB-INF folder inside the final WAR -->
+			<resource>
+			    <directory>resources-appserver-specific/${appserver.discriminator}/WEB-INF</directory>
+			    <targetPath>WEB-INF</targetPath>
+			</resource>
+			<!-- copy the properties file containing translations as they will not be copied automatically -->
+			<resource>
+			    <directory>src/main/resources/ro/satrapu/churchmanagement/ui</directory>
+			    <targetPath>WEB-INF/classes/ro/satrapu/churchmanagement/ui</targetPath>
+			</resource>
+		    </webResources>
 		</configuration>
 	    </plugin>
 	</plugins>
