--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
 	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -29,6 +29,11 @@
 	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 	</license>
     </licenses>
+    <url>https://github.com/satrapu/church-management-jee</url>
+    <organization>
+	<url>http://crossprogramming.com/</url>
+	<name>crossprogramming</name>
+    </organization>
     <developers>
 	<developer>
 	    <id>satrapu</id>
@@ -111,6 +116,28 @@
 		<appserver.discriminator>wildfly</appserver.discriminator>
 	    </properties>
 	</profile>
+	<profile>
+	    <!-- When built in OpenShift the openshift profile will be used when invoking mvn. -->
+	    <!-- Use this profile for any OpenShift specific customization your app will need. -->
+	    <!-- By default that is to put the resulting archive into the deployments folder. -->
+	    <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+	    <id>openshift</id>
+	    <build>
+		<finalName>church-management</finalName>
+		<plugins>
+		    <!--
+		    <plugin>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>2.4</version>
+			  <configuration>
+			    <outputDirectory>YOUR WAR DESTINATION</outputDirectory>
+			    <warName>ROOT</warName>
+			  </configuration>
+			</plugin>
+		    -->
+		</plugins>
+	    </build>
+	</profile>
     </profiles>
     <build>
 	<finalName>${project.name}</finalName>
@@ -169,9 +196,4 @@
 	    </plugin>
 	</plugins>
     </build>
-    <url>https://github.com/satrapu/church-management-jee</url>
-    <organization>
-    	<url>http://crossprogramming.com/</url>
-    	<name>crossprogramming</name>
-    </organization>
 </project>
