--- a/pom.xml
+++ b/pom.xml
@@ -117,24 +117,22 @@
 	    </properties>
 	</profile>
 	<profile>
-	    <!-- When built in OpenShift the openshift profile will be used when invoking mvn. -->
-	    <!-- Use this profile for any OpenShift specific customization your app will need. -->
-	    <!-- By default that is to put the resulting archive into the deployments folder. -->
-	    <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 	    <id>openshift</id>
+	    <properties>
+		<appserver.discriminator>wildfly</appserver.discriminator>
+	    </properties>
 	    <build>
 		<finalName>church-management</finalName>
 		<plugins>
-		    <!--
 		    <plugin>
-			  <artifactId>maven-war-plugin</artifactId>
-			  <version>2.4</version>
-			  <configuration>
-			    <outputDirectory>YOUR WAR DESTINATION</outputDirectory>
+			<artifactId>maven-war-plugin</artifactId>
+			<version>2.4</version>
+			<configuration>
+			    <failOnMissingWebXml>false</failOnMissingWebXml>
+			    <outputDirectory>deployments</outputDirectory>
 			    <warName>ROOT</warName>
-			  </configuration>
-			</plugin>
-		    -->
+			</configuration>
+		    </plugin>
 		</plugins>
 	    </build>
 	</profile>
