--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,21 @@
 language: java
+
 jdk:
   - oraclejdk8
   - oraclejdk7
+  
+env:
+  global:
+   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
+   #   via the "travis encrypt" command using the project repo's public key
+   - secure: "DFURRMbCZnKRk+uWvKWL/eSLKxlodv3k0xbqXyD80jVYd/MDMqzmxaB2c2JWkBTjeA3F8FJETa4MKVvR496A6fCXuZ4Qt+I77hwjcSl82EyWHvzn9PWMl5c8CegGvLkKas+oIUOSmR0AuDd/Jf78cxe9Z9TGZIubpFusbQLqXLU="
+
+addons:
+  coverity_scan:
+    project:
+      name: "satrapu/church-management-jee"
+      description: "Build submitted via Travis CI"
+    notification_email: bogdan.marian77@gmail.com
+    build_command_prepend: "mvn clean"
+    build_command:   "mvn -DskipTests=true compile"
+    branch_pattern: coverity-scan
