--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ro.satrapu</groupId>
@@ -173,7 +173,7 @@
 		    <webResources>
 			<!-- copy application server specific configuration files -->
 			<resource>
-			    <directory>resources-appserver-specific/${appserver.discriminator}/WEB-INF</directory>
+			    <directory>${project.basedir}/application-servers-config/${appserver.discriminator}/WEB-INF</directory>
 			    <targetPath>WEB-INF</targetPath>
 			</resource>
 			
