--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ro.satrapu</groupId>
     <artifactId>church-management</artifactId>
@@ -11,187 +11,179 @@
     <description>JEE web application used for managing the assets of a church.</description>
     <inceptionYear>2014</inceptionYear>
     <ciManagement>
-	<system>drone.io</system>
-	<url>https://drone.io/github.com/satrapu/church-management-jee</url>
+        <system>drone.io</system>
+        <url>https://drone.io/github.com/satrapu/church-management-jee</url>
     </ciManagement>
     <scm>
-	<connection>https://github.com/satrapu/church-management-jee.git</connection>
-	<url>https://github.com/satrapu/church-management-jee/commits</url>
-	<developerConnection>https://github.com/satrapu/church-management-jee.git</developerConnection>
+        <connection>scm:git:https://github.com/satrapu/church-management-jee.git</connection>
+        <url>https://github.com/satrapu/church-management-jee/commits</url>
+        <developerConnection>scm:git:https://github.com/satrapu/church-management-jee.git</developerConnection>
     </scm>
     <issueManagement>
-	<system>GitHub Issues</system>
-	<url>https://github.com/satrapu/church-management-jee/issues</url>
+        <system>GitHub Issues</system>
+        <url>https://github.com/satrapu/church-management-jee/issues</url>
     </issueManagement>
     <licenses>
-	<license>
-	    <name>Apache License 2.0</name>
-	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	</license>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
     </licenses>
     <url>https://github.com/satrapu/church-management-jee</url>
     <organization>
-	<url>http://crossprogramming.com/</url>
-	<name>crossprogramming</name>
+        <url>http://crossprogramming.com/</url>
+        <name>crossprogramming</name>
     </organization>
     <developers>
-	<developer>
-	    <id>satrapu</id>
-	    <name>Bogdan Marian</name>
-	    <email>bogdan.marian77@gmail.com</email>
-	    <timezone>2</timezone>
-	    <url>https://www.linkedin.com/in/bmarian</url>
-	    <roles>
-		<role>Main Commiter</role>
-	    </roles>
-	</developer>
+        <developer>
+            <id>satrapu</id>
+            <name>Bogdan Marian</name>
+            <email>bogdan.marian77@gmail.com</email>
+            <timezone>2</timezone>
+            <url>https://www.linkedin.com/in/bmarian</url>
+            <roles>
+                <role>Main Commiter</role>
+            </roles>
+        </developer>
     </developers>
     <properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <repositories>
-	<repository>  
-	    <id>prime-repo</id>  
-	    <name>PrimeFaces Maven Repository</name>  
-	    <url>http://repository.primefaces.org</url>  
-	    <layout>default</layout>  
-	</repository>  
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>http://repository.primefaces.org</url>
+            <layout>default</layout>
+        </repository>
     </repositories>
     <dependencies>
-	<dependency>
-	    <groupId>org.eclipse.persistence</groupId>
-	    <artifactId>eclipselink</artifactId>
-	    <version>2.5.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.eclipse.persistence</groupId>
-	    <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-	    <version>2.5.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax</groupId>
-	    <artifactId>javaee-web-api</artifactId>
-	    <version>7.0</version>
-	    <scope>provided</scope>
-	</dependency>
-	<dependency> 
-	    <groupId>ch.qos.logback</groupId>
-	    <artifactId>logback-classic</artifactId>
-	    <version>1.1.2</version>
-	</dependency>
-	<dependency> 
-	    <groupId>ch.qos.logback</groupId>
-	    <artifactId>logback-core</artifactId>
-	    <version>1.1.2</version>
-	</dependency>
-	<dependency> 
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-api</artifactId>
-	    <version>1.7.7</version>
-	</dependency>
-	<dependency>  
-	    <groupId>org.primefaces</groupId>  
-	    <artifactId>primefaces</artifactId>  
-	    <version>4.0</version>  
-	</dependency>  
-	<dependency>
-	    <groupId>org.projectlombok</groupId>
-	    <artifactId>lombok</artifactId>
-	    <version>1.14.4</version>
-	</dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.4</version>
+        </dependency>
     </dependencies>
     <profiles>
-	<profile>
-	    <id>glassfish</id>
-	    <activation>
-		<activeByDefault>true</activeByDefault>
-	    </activation>
-	    <properties>
-		<appserver.discriminator>glassfish</appserver.discriminator>
-	    </properties>
-	</profile>
-	<profile>
-	    <id>wildfly</id>
-	    <properties>
-		<appserver.discriminator>wildfly</appserver.discriminator>
-	    </properties>
-	</profile>
-	<profile>
-	    <id>openshift</id>
-	    <properties>
-		<appserver.discriminator>wildfly</appserver.discriminator>
-	    </properties>
-	    <build>
-		<finalName>church-management</finalName>
-		<plugins>
-		    <plugin>
-			<artifactId>maven-war-plugin</artifactId>
-			<version>2.4</version>
-			<configuration>
-			    <failOnMissingWebXml>false</failOnMissingWebXml>
-			    <outputDirectory>deployments</outputDirectory>
-			    <warName>ROOT</warName>
-			</configuration>
-		    </plugin>
-		</plugins>
-	    </build>
-	</profile>
+        <profile>
+            <id>glassfish</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <appserver.discriminator>glassfish</appserver.discriminator>
+            </properties>
+        </profile>
+        <profile>
+            <id>wildfly</id>
+            <properties>
+                <appserver.discriminator>wildfly</appserver.discriminator>
+            </properties>
+        </profile>
+        <profile>
+            <id>openshift</id>
+            <properties>
+                <appserver.discriminator>wildfly</appserver.discriminator>
+            </properties>
+            <build>
+                <finalName>church-management</finalName>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.6</version>
+                        <configuration>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                            <outputDirectory>deployments</outputDirectory>
+                            <warName>ROOT</warName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
     <build>
-	<finalName>${project.name}</finalName>
-	<defaultGoal>clean install</defaultGoal>
-	<filters>
-	    <filter>src/main/filters/${appserver.discriminator}.properties</filter>
-	</filters>
-	<resources>
-	    <!-- replace tokens with actual values coming from the filters (i.e. the data source name found inside persistence.xml) -->
-	    <resource>
-		<directory>src/main/resources</directory>
-		<filtering>true</filtering>
-		<includes>
-		    <include>**/*.xml</include>
-		</includes>
-	    </resource>
-	</resources>
-	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>3.1</version>
-		<configuration>
-		    <source>1.8</source>
-		    <target>1.8</target>
-		    <showDeprecation>true</showDeprecation>
-		</configuration>
-	    </plugin>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-war-plugin</artifactId>
-		<version>2.4</version>
-		<configuration>
-		    <failOnMissingWebXml>false</failOnMissingWebXml>
-		    <webResources>
-			<!-- copy application server specific configuration files -->
-			<resource>
-			    <directory>${project.basedir}/application-servers-config/${appserver.discriminator}/WEB-INF</directory>
-			    <targetPath>WEB-INF</targetPath>
-			</resource>
-			
-			<!-- copy property file used by the UI -->
-			<resource>
-			    <directory>src/main/resources/ro/satrapu/churchmanagement/ui</directory>
-			    <targetPath>WEB-INF/classes/ro/satrapu/churchmanagement/ui</targetPath>
-			</resource>
-			
-			<!-- copy property files used by custom JSF converters and validators -->
-			<resource>
-			    <directory>src/main/resources</directory>
-			    <include>ValidationMessages*.properties</include>
-			    <targetPath>WEB-INF/classes</targetPath>
-			</resource>
-		    </webResources>
-		</configuration>
-	    </plugin>
-	</plugins>
+        <finalName>${project.name}</finalName>
+        <defaultGoal>clean install</defaultGoal>
+        <filters>
+            <filter>src/main/filters/${appserver.discriminator}.properties</filter>
+        </filters>
+        <resources>
+            <!-- replace tokens with actual values coming from the filters (i.e. the data source name found inside persistence.xml) -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <webResources>
+                        <!-- copy application server specific configuration files -->
+                        <resource>
+                            <directory>
+                                ${project.basedir}/application-servers-config/${appserver.discriminator}/WEB-INF
+                            </directory>
+                            <targetPath>WEB-INF</targetPath>
+                        </resource>
+
+                        <!-- copy property file used by the UI -->
+                        <resource>
+                            <directory>src/main/resources/ro/satrapu/churchmanagement/ui</directory>
+                            <targetPath>WEB-INF/classes/ro/satrapu/churchmanagement/ui</targetPath>
+                        </resource>
+
+                        <!-- copy property files used by custom JSF converters and validators -->
+                        <resource>
+                            <directory>src/main/resources</directory>
+                            <include>ValidationMessages*.properties</include>
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
