--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.4</version>
         </dependency>
+        <dependency>
+            <groupId>io.codearte.jfairy</groupId>
+            <artifactId>jfairy</artifactId>
+            <version>0.5.0</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
