Fixed misspelled word. Updated libraries to their latest versions.

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <timezone>2</timezone>
             <url>https://www.linkedin.com/in/bmarian</url>
             <roles>
-                <role>Main Commiter</role>
+                <role>Main Committer</role>
             </roles>
         </developer>
     </developers>
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <version>4.3.1.Final</version>
+            <version>5.0.3.Final</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -87,17 +87,17 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.2</version>
+            <version>5.3</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.4</version>
+            <version>1.16.6</version>
         </dependency>
         <dependency>
             <groupId>io.codearte.jfairy</groupId>
             <artifactId>jfairy</artifactId>
-            <version>0.5.0</version>
+            <version>0.5.1</version>
         </dependency>
     </dependencies>
     <profiles>
