--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
             <version>5.0.3.Final</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -83,6 +84,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>io.codearte.jfairy</groupId>
