Correctly marked annotation processor dependencies with scope provided to ensure they will not show-up in the final WAR file, as described here: http://stackoverflow.com/questions/14322904/maven-3-how-to-add-annotation-processor-dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
             <version>5.0.3.Final</version>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -84,7 +84,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.codearte.jfairy</groupId>
